Contact.html is 95% done (2/6). Starting on News.html and Products.html next

--- a/style.css
+++ b/style.css
@@ -119,3 +119,9 @@ form {
 .fader-gradient {
     background: linear-gradient(180deg, #FFFFFF, #10934B);
 }
+h6 {
+    font-weight: 300;
+}
+h5 {
+    font-weight: 400;
+}
