--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ nav .navbar-nav li a {
     color: #2E2F82 !important;
     font-weight: 300;
     letter-spacing: -0.8px;
+    margin-left: 22px;
+    margin-right: 22px;
 }
 nav .navbar-nav li a:hover {
     color: #10934B !important;
@@ -70,6 +72,7 @@ html {
     font-weight: 300;
     color: white;
     background: linear-gradient(90deg,#2E2F82, #10934B);
+    border-radius: 0;
 }
 .button-link {
     background: linear-gradient(180deg,rgb(19, 20, 83), rgb(6, 92, 45));
@@ -82,6 +85,9 @@ html {
     background: #DDDDDD;
     text-decoration: none;
     color: #10934B;
+}
+.news > img {
+    border-radius: 10px;
 }
 .article {
     background: linear-gradient(180deg,#2E2F82, #10934B);
@@ -124,4 +130,9 @@ h6 {
 }
 h5 {
     font-weight: 400;
+}
+.sm-icon {
+    width: 60px;
+    height: 60px;
+    border-radius: 10px;
 }
