Product Page 90% (4/6) - Support.html and About.html left

--- a/style.css
+++ b/style.css
@@ -13,7 +13,9 @@ p {
     display: block;
     text-align: center;
 }
-
+.padder {
+    padding: 15px;
+}
 .navbar-nav > li {
     display: inline-block;
     float:none;
